--- a/style.css
+++ b/style.css
@@ -151,3 +151,56 @@ font-style: normal;
 font-weight: 600;
 line-height: 35px;
 }
+.section3{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+background: rgba(214, 82, 110, 0.05);
+}
+.section3-h1{
+    color: #272727;
+font-family: open sans;
+font-size: 40px;
+font-weight: 800;
+padding:40px 100px 5px 50px;
+display: block;
+align-items: center;
+}
+.off{
+     color: #E55473;
+}
+.section3-p{
+    display: block;
+    align-items: center;
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: open sans;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+padding: 5px;
+  padding: 30px;
+}
+.btn1{
+    display: inline-flex;
+padding: 20px 43px;
+align-items: flex-start;
+gap: 10px;
+font-size: 20px;
+border-radius: 8px;
+background: #E55473;
+}
+.btn1:hover{
+    color: brown;
+}
+
+.section3-img{
+    width: 318px;
+height: 420px;
+flex-shrink: 0;
+padding-left: 40px;
+
+}
