--- a/style.css
+++ b/style.css
@@ -208,3 +208,35 @@ padding-left: 40px;
 .section4{
     text-align: center;
 }
+.section4-h1{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.section4-p{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+.section5{
+   display: flex;
+   justify-content: space-around;
+   text-align: center;
+   padding: 30px 300px 30px 300px;
+   gap:20px;
+ 
+
+}
+.img5{
+    width: 270px;
+    height: 290px;
+    gap:20px;
+}
