--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ line-height: 30px;
    text-align: center;
    padding: 30px 300px 30px 300px;
    gap:20px;
+   margin-bottom: 20px;
  
 
 }
@@ -239,4 +240,96 @@ line-height: 30px;
     width: 270px;
     height: 290px;
     gap:20px;
+}
+
+.section6-h1{
+    color: #272727;
+text-align: center;
+font-family: open sans-serif;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.section6-p{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: open serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.form {
+    text-align: center;
+    margin-top: 68px;
+}
+.input{
+    padding:20px 250px;
+    border-radius: 8px;
+    background: #FFF;
+}
+.section6-btn{
+  display: block;
+ text-align: center;
+ margin-top: 10px;
+ text-align: right;
+ margin-bottom: 100px;
+ font-size: 30px;
+ font-weight: 500;
+
+}
+.btn6{
+  font-size: 30px;
+  font-weight: 500;
+  border-radius: 8px;
+  border: 0;
+background: #E55473;
+}
+.section6{
+    border-radius: 8px;
+    background-image: url('Flower Asset/Rectangle 9.png');
+    padding:50px;
+    margin: 20px 100px 20px 100px;
+}
+.footer-h1{
+    padding: 20px;
+    margin: 50px;
+    text-align: center;
+font-family: open sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.footer-f{
+   color: #E55473;
+}
+.footer{
+    margin: 40px 0px 0px 40px;
+    background: #111010;
+}
+.footer-class{
+ color: rgba(255, 255, 255, 0.90);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+margin-bottom: 20px;
+padding: 20px;
+}
+.footer-h4{
+ color: rgba(255, 255, 255, 0.40);
+text-align: center;
+font-family: Lato;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-bottom: 50px;
+padding: 20px;
+}
+.shop{
+    color:#fcdede;
 }
