--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+ 
+ @media screen and (min-width: 80rem) {
+    .container {
+      margin: 1em 2em;
+    }
+  }
+  
 *{
     margin: 0;
     padding: 0;
